# aiohttp

./: .env  README.md  pyproject.toml
migrations/account/: 0_20240125192651_init.py  1_20240125193157_account_refresh.py
src/aihttp/api/: urls.py
src/aihttp/api/account/: models.py  urls.py  views.py
src/aihttp/app/: __main__.py  srv.py
src/aihttp/conf/: __init__.py  _conf.py
src/aihttp/web/: urls.py
src/aihttp/web/home/: views.py
src/arest/api/: urls.py
src/arest/api/account/: models.py  urls.py  views.py
src/arest/api/files/: models.py  urls.py  views.py
src/arest/app/: __main__.py  middle.py  srv.py
src/arest/conf/: __init__.py  _conf.py
src/arest/db/: __init__.py
src/arest/exceptions/: __init__.py
src/arest/views/: __init__.py  _base.py  perms.py
src/arest/web/: urls.py
src/arest/web/contacts/templates/: about.html  contact.html  home.html
src/arest/web/home/: views.py
src/arest/web/home/templates/: activate.html
src/log/: __init__.py  formatters.py  logging.yaml
