[tool.poetry]
name = "aihttp"
version = "0.1.0"
description = ""
authors = ["Alesya Pavluchenko <anrx16@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "aihttp", from = "src/" },
    { include = "log", from = "src/" },
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
tortoise-orm = "^0.20.0"
asyncpg = "^0.29.0"
aiohttp-jinja2 = "^1.6"
dynaconf = "^3.2.4"
pyyaml = "^6.0.1"
controller = {git = "https://gitlab.com/xolloo/aiohttp_controller.git"}
aerich = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
aiohttp-devtools = "^1.1.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"



[tool.aerich]
tortoise_orm = "src.aihttp.conf._conf.DATABASE"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
